--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -342,7 +342,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="co_observacion">Diario contable*</label>
-                                @Html.Action("GridViewPartial_deudas_dc")
+                                @*@Html.Action("GridViewPartial_deudas_dc")*@
+                                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
                             </div>
                         </div>
                     </div>
@@ -741,7 +742,8 @@
                     $("#co_valoriva").val(data.IVA);
                     $("#co_Por_iva").val(12);
                     $("#co_total").val(data.Total);
-                    GridViewPartial_deudas_dc.PerformCallback();
+                    //GridViewPartial_deudas_dc.PerformCallback();
+                    GridView_comprobante_detalle.PerformCallback();
                 },
                 error: function (error) {
                 }
