--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
@@ -264,7 +264,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="co_observacion">Diario contable*</label>
-                                @Html.Action("GridViewPartial_nota_credito_dc")
+                                @*@Html.Action("GridViewPartial_nota_credito_dc")*@
+                                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
                             </div>
                         </div>
                     </div>
@@ -529,7 +530,8 @@ function armar_diario() {
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_nota_credito_dc.PerformCallback();
+                //GridViewPartial_nota_credito_dc.PerformCallback();
+                GridView_comprobante_detalle.PerformCallback();
             },
             error: function (error) {
             }
