--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Modificar.cshtml
@@ -254,7 +254,8 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="co_observacion">Diario contable*</label>
-                                @Html.Action("GridViewPartial_nota_debito_dc")
+                                @*@Html.Action("GridViewPartial_nota_debito_dc")*@
+                                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
                             </div>
                         </div>
                     </div>
@@ -487,7 +488,8 @@
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    GridViewPartial_nota_debito_dc.PerformCallback();
+                    //GridViewPartial_nota_debito_dc.PerformCallback();
+                    GridView_comprobante_detalle.PerformCallback();
                 },
                 error: function (error) {
                 }
