--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
@@ -63,6 +63,7 @@
     @Html.HiddenFor(q => q.IdGuiaRemision)
     @Html.HiddenFor(q => q.IdBodega, new { @id = "IdBodega" })
     @Html.HiddenFor(q => q.IdPuntoVta, new { @id = "IdPuntoVta" })
+    @Html.HiddenFor(q => q.IdPuntoVta_Fact, new { @id = "IdPuntoVta_Fact" })
     @Html.HiddenFor(q => q.IdCbteVta, new { @id = "IdCbteVta" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
@@ -271,9 +272,9 @@
                     <label for="Marca_Biometrico"></label>
                     @Html.DevExpress().CheckBoxFor(q => q.GenerarFactura, settings =>
                             {
-                                settings.Name = "ExisteFactura";
+                                settings.Name = "GenerarFactura";
                                 settings.Text = "Generar Factura";
-
+                                settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){MostrarDatosFactura();}";
                             }).GetHtml()
                     @Html.ValidationMessageFor(q => q.GenerarFactura, "", new { @class = "text-danger" })
                 </div>
@@ -299,12 +300,14 @@
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
-                <a href="#detalle_guia" aria-controls="informacion_general" role="tab" data-toggle="tab">Detalle guia</a>
+                <a href="#detalle_guia" aria-controls="informacion_general" role="tab" data-toggle="tab" id="link_detalle_guia">Detalle guia</a>
             </li>
             <li>
                 <a href="#tab_documentos_relacionados" aria-controls="contactos_telefonos" role="tab" data-toggle="tab">Documentos relacionados</a>
             </li>
-
+            <li>
+                <a href="#tab_datos_factura" aria-controls="datos_factura" role="tab" data-toggle="tab" id="link_datos_factura">Datos factura</a>
+            </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="detalle_guia">
@@ -337,7 +340,65 @@
                     </div>
                 </div>
             </div>
-
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_datos_factura">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdVendedor">Vendedor*</label>
+                                @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
+                                @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdCatalogo_FormaPago">Forma de pago*</label>
+                                @Html.DropDownListFor(q => q.IdCatalogo_FormaPago, new SelectList(ViewBag.lst_formapago, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdCatalogo_FormaPago" })
+                                @Html.ValidationMessageFor(q => q.IdCatalogo_FormaPago, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdTerminoPago">Termino pago*</label>
+                                @Html.DropDownListFor(q => q.vt_tipo_venta, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "vt_tipo_venta" })
+                                @Html.ValidationMessageFor(q => q.vt_tipo_venta, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdPuntoVta">Punto de venta*</label>
+                                @Html.DropDownListFor(q => q.IdPuntoVta_Fact, new SelectList(ViewBag.lst_punto_venta_factura, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta_Fact" })
+                                @Html.ValidationMessageFor(q => q.IdPuntoVta_Fact, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2" id="datos_punto_venta1_fact">
+                            <div class="form-group">
+                                <label for="Serie1">Establecimiento*</label>
+                                @Html.TextBoxFor(q => q.vt_serie1, new { @class = "form-control", @id = "vt_serie1" })
+                                @Html.ValidationMessageFor(q => q.vt_serie1, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2" id="datos_punto_venta2_fact">
+                            <div class="form-group">
+                                <label for="Serie2">Pto. Emisión*</label>
+                                @Html.TextBoxFor(q => q.vt_serie2, new { @class = "form-control", @id = "vt_serie2" })
+                                @Html.ValidationMessageFor(q => q.vt_serie2, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-4" id="datos_punto_venta3_fact">
+                            <div class="form-group">
+                                <label for="NumNota_Impresa"># Documento*</label>
+                                @Html.TextBoxFor(q => q.vt_NumFactura, new { @class = "form-control", @id = "vt_NumFactura" })
+                                @Html.ValidationMessageFor(q => q.vt_NumFactura, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -381,12 +442,20 @@
 <script>
     $(function () {
         MostrarGenerarFactura();
+        MostrarDatosFactura();
         CargarPuntosDeVenta();
+        CargarPuntosDeVenta_Factura();
+        GetUltimoDocumento_Factura();
         get_direccion();
         get_placa();
 
         $("#IdSucursal").change(function () {
             CargarPuntosDeVenta();
+            CargarPuntosDeVenta_Factura();
+        });
+
+        $("#IdPuntoVta_Fact").change(function () {
+            GetUltimoDocumento_Factura();
         });
     });
 
@@ -397,12 +466,23 @@
 
     function MostrarGenerarFactura() {
         var IdCbteVta = $("#IdCbteVta").val();
-        if (IdCbteVta > 0)
-        {
-            $("#DivGenerarFactura").hide();
+        //if (IdCbteVta > 0) {
+        //    $("#DivGenerarFactura").hide();
+        //}
+        //else {
+        //    $("#DivGenerarFactura").show();
+        //}
+    }
+
+    function MostrarDatosFactura() {
+        if (GenerarFactura.GetChecked() == true) {
+            $("#link_datos_factura").show();
+            $("#link_datos_factura").click();
         }
         else {
-            $("#DivGenerarFactura").show();
+            $("#link_datos_factura").hide();
+            $("#link_detalle_guia").click();
+            
         }
     }
 
@@ -549,6 +629,67 @@
             }
         });
     };
+
+    function CargarPuntosDeVenta_Factura() {
+        $("#IdPuntoVta_Fact").empty();
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarPuntosDeVenta_Factura", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdPuntoVta_Fact").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
+                    $("#IdPuntoVta_Fact").val($("#IdPuntoVta_Fact option:first").val());
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function GetUltimoDocumento_Factura() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta_Fact").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento_Factura", "GuiaRemision",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.data_puntovta != null) {
+                    console.log(data.data_puntovta.EsElectronico);
+                    if (data.data_puntovta.EsElectronico == true) {
+                        $("#datos_punto_venta1_fact").hide();
+                        $("#datos_punto_venta2_fact").hide();
+                        $("#datos_punto_venta3_fact").hide();
+                    }
+                    else {
+                        $("#datos_punto_venta1_fact").show();
+                        $("#datos_punto_venta2_fact").show();
+                        $("#datos_punto_venta3_fact").show();
+
+                        if (data.data_talonario != null) {
+                            $("#vt_serie1").val(data.data_talonario.Establecimiento);
+                            $("#vt_serie2").val(data.data_talonario.PuntoEmision);
+                            $("#vt_NumFactura").val(data.data_talonario.NumDocumento);
+                        }
+                    }
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
 
 
