--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_009.cshtml
@@ -1,4 +1,5 @@
-﻿model Core.Erp.Info.Helps.cl_filtros_inventario_Info
+﻿@using System.Web.UI.WebControls
+@model Core.Erp.Info.Helps.cl_filtros_inventario_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "INV_009";
