--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_012.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_012.cshtml
@@ -51,6 +51,13 @@
                             @Html.ValidationMessageFor(q => q.IdMovi_inven_tipo, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="IdNumMovi"># movimiento</label>
+                            @Html.TextBoxFor(q => q.IdNumMovi, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdNumMovi, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.box-body -->
